<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.koloh.simpleandroidquiz.StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_margin_left"
        android:layout_marginRight="@dimen/main_margin_right"
        android:layout_marginTop="@dimen/start_margin_top"
        android:fontFamily="@string/font_family_type"
        android:text="@string/start_text1"
        android:textColor="@color/colorMainText"
        android:textSize="@dimen/start_text_size" />

    <ImageView
        android:id="@+id/android_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/start_image_margin_bottom"
        android:layout_marginTop="@dimen/start_image_margin_top"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:src="@drawable/android_logo2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_margin_left"
        android:layout_marginRight="@dimen/main_margin_right"
        android:layout_marginTop="@dimen/start_margin_top"
        android:fontFamily="@string/font_family_type"
        android:text="@string/start_text2"
        android:textColor="@color/colorMainText"
        android:textSize="@dimen/start_text_size" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_margin_bottom_button"
        android:layout_marginTop="@dimen/main_margin_top"
        android:gravity="bottom"
        android:onClick="startQuiz"
        android:text="@string/main_startbutton_text"
        android:textColor="@color/colorStartText"
        android:theme="@style/AppTheme.Button" />


</LinearLayout>